syntax = "proto2";
import "hdmap-geometry.proto";
package zas.hdmap_ptcl;

message road
{
	// 道路ID
	required fixed64 id = 1;
	
	// 前一个/下一个对象的ID
	// 注意：ID可能是一个road或一个junction
	oneof prev_id {
		fixed64 prev_junction_id = 2;
		fixed64 prev_road_id = 3;
	}
	oneof next_id {
		fixed64 next_junction_id = 4;
		fixed64 next_road_id = 5;
	}
	
	 // 道路名称
	optional string name = 6;

	// 该道路的参考线（reference line）
	// ref type: reference_line
	repeated fixed64 refline = 7;
	
	// 道路的左右边界，车辆应保持不越过该车道
	optional boundary_ref left = 8;
	optional boundary_ref right = 9;
	
	// 道路的所有车道的集合
	repeated fixed64 lanes = 10;
}